--- a/src/Components/Cards/MenuCard/MenuCard.css
+++ b/src/Components/Cards/MenuCard/MenuCard.css
@@ -1,9 +1,9 @@
-.menu-card-wrapper{
+/* .menu-card-wrapper{
     width: 300px;
     border: 1px solid black;
     margin: auto;
     margin-bottom: 20px;
-}
+} */
 
 .mc-pick-up{
     font-size: 22px;
@@ -50,4 +50,31 @@
     font-size: 22px;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+@media (min-width: 1001px){
+    .menu-card-wrapper{
+        width: 300px;
+        border: 1px solid black;
+        /* margin: auto; */
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 1000px) and (min-width: 751px){
+    .menu-card-wrapper{
+        width: 300px;
+        border: 1px solid black;
+        /* margin: auto; */
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 700px){
+    .menu-card-wrapper{
+        width: 300px;
+        border: 1px solid black;
+        margin: auto;
+        margin-bottom: 20px;
+    }
 }
