--- a/src/Components/Cards/OrderCard/OrderCard.css
+++ b/src/Components/Cards/OrderCard/OrderCard.css
@@ -1,9 +1,4 @@
-.om-wrapper{
-    width: 300px;
-    margin: auto;
-    border: 1px solid black;
-    text-align: left;
-}
+
 
 .om-store-name{
     text-align: left;
@@ -54,15 +49,52 @@
     width: 125px;
     height: 35px;
     font-size: 22px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .om-dummy{
     margin-left: 10px;
     width: 125px;
     height: 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .om-price{
     font-size: 22px;
     margin-right: 10px;
+}
+
+@media (min-width: 1001px){
+    .om-wrapper{
+        width: 300px;
+        /* margin: auto; */
+        border: 1px solid black;
+        text-align: left;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 1000px) and (min-width: 751px){
+    .om-wrapper{
+        width: 300px;
+        /* margin: auto; */
+        border: 1px solid black;
+        text-align: left;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 700px){
+    .om-wrapper{
+        width: 300px;
+        margin: auto;
+        border: 1px solid black;
+        text-align: left;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
 }
