--- a/src/Components/SearchResult/SearchResult.css
+++ b/src/Components/SearchResult/SearchResult.css
@@ -6,3 +6,30 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+
+
+
+@media (min-width: 1001px){
+    .search-result-label{
+        width: 750px;
+        margin: auto;
+        text-align: left;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 1000px) and (min-width: 751px){
+    .search-result-label{
+        width: 500px;
+        margin: auto;
+        text-align: left;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 700px){
+
+}
